--- a/plans.css
+++ b/plans.css
@@ -32,14 +32,14 @@
      justify-content: space-between;
      margin: 2rem 0 2rem;
      transform: rotateX(180deg);
-     transition: .3s;
+     transition: 1s;
  }
  
  .price-plans .plan {
      width: 15%;
      display: flex;
      flex-direction: column;
-     transition: .2s;
+     transition: .4s;
  }
  
  .price-plans .plan:hover {
