--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
                 background: url(./img/header.webp) no-repeat center center;
                 background-size: 100% 100%;
                 width: 100%;
-                height: 28rem;
+                height: 100vh;
                 position: relative;
             }
             
@@ -40,7 +40,7 @@
             
             header img {
                 width: 7rem;
-                margin-top: 2rem;
+                margin-top: 4rem;
             }
             
             header h1 {
@@ -49,7 +49,7 @@
                 font-size: 3em;
                 font-weight: 600;
                 line-height: 1;
-                margin-top: 3.5rem;
+                margin-top: 6rem;
                 transition: 2s;
             }
             
@@ -60,7 +60,7 @@
                 background-color: azure;
                 padding: .6rem 1rem;
                 border-radius: .4rem;
-                margin-top: 3.8rem;
+                margin-top: 15rem;
             }
             
             .content,
